<resources>
    <string name="app_name">HDesign</string>
    <string name="facebook_app_id" translatable="false">3369984609932290</string>
    <string name="default_notification_channel_id" translatable="false">@string/app_name</string>
    <string name="search">Search</string>
    <string name="title_splash_01">Human Design</string>
    <string name="next">Next</string>
    <string name="desc_splash_01">
        <![CDATA[
Human Design is the newest system for self-discovery.
<br><br>
This is a tool that brings together principles of the Chinese I Ching, the Hindu chakra system, Kaballah, astrology, quantum physics and genetics.
<br><br>
Human Design helps living in sync with your true nature. It guides you in building harmonious relationships with yourself and the world around you. ]]></string>
    <string name="desc_splash_02">
    <![CDATA[
Human Design offers a personality analysis based on the bodygraph, the so-called Rave Card.
<br><br>
The individual Rave Card contains a schematic image of energy centers, channels and gates that reflect the energy flow of each person.
<br><br>
 To calculate your personal Rave Card, you only need to fill in the data and answer a few questions.]]></string>
    <string name="title_splash_03"><![CDATA[Did you know<br>something about<br>Human Design?]]></string>
    <string name="title_splash_04"><![CDATA[What would you like<br>to get using<br>Human Design?]]></string>
    <string name="desc_splash_03"><![CDATA[Your answers will help us find<br>a more personalized approach for you.]]></string>
    <string name="desc_splash_04"><![CDATA[Your answers will help us choose<br>a personal approach.]]></string>
    <string name="variant_1_splash_03"><![CDATA[I didn\'t know anything<br>about Human Design]]></string>
    <string name="variant_2_splash_03"><![CDATA[I knew something, but<br>superficially]]></string>
    <string name="variant_3_splash_03"><![CDATA[I understand a little about<br>this system]]></string>
    <string name="variant_4_splash_03"><![CDATA[I study Human Design<br>professionally]]></string>
    <string name="variant_1_splash_04"><![CDATA[Know yourself better]]></string>
    <string name="variant_2_splash_04"><![CDATA[Improve the quality of life]]></string>
    <string name="variant_3_splash_04"><![CDATA[Find your destination]]></string>
    <string name="variant_4_splash_04"><![CDATA[Build relationships<br>with loved ones]]></string>
    <string name="variant_5_splash_04"><![CDATA[For general development]]></string>
    <string name="splash_05_title">Please allow us to track application usage</string>
    <string name="splash_05_desc">It is important for us, so that we can:</string>
    <string name="splash_05_text_1">Personalize your experience of using the App</string>
    <string name="splash_05_text_2">Send individual offers especially for you</string>
    <string name="splash_05_text_3">Invite users similar to you to the App</string>
    <string name="text_1_splash_05"><![CDATA[Please allow us to track application usage. It is<br>important for us, so that we can:]]></string>
    <string name="text_2_splash_05"><![CDATA[- Personalize your experience of using the App<br>- Invite users similar to you to the App<br>- Send individual offers especially for you]]></string>
    <string name="text_3_splash_05"><![CDATA[These parameters can always be changed in the<br>"settings" of your device.]]></string>
    <string name="rave_title">Rave Card</string>
    <string name="rave_desc"><![CDATA[
    In Human Design, personality analysis is<br>carried out on the basis of a bodygraph,<br>the so-called Rave Card.
<br><br>
An individual Rave Card (bodygraph)<br>contains a schematic image of energy<br>centers, channels and gates that reflect<br>the personal energy mechanics of each<br>person, as well as the algorithm of its<br>work.
<br><br>
To calculate a personal Rave Card<br>(bodygraph), you need to fill in the data<br>and answer a few questions.
]]></string>
    <string name="understand">Continue</string>
    <string name="continue_btn">Continue</string>
    <string name="continue_btn_start">Continue</string>
    <string name="start_rave_btn_text">Create</string>
    <string name="start_name_title"><![CDATA[What is<br>your name?]]></string>
    <string name="start_name_desc"><![CDATA[We’ll enjoy getting to know your better.]]></string>
    <string name="start_name_hint">Name</string>
    <string name="start_date_title">Date of birth</string>
    <string name="start_date_desc"><![CDATA[You date of birth is essential for identifying the exact position of the planets at the moment you were born.]]></string>
    <string name="start_time_title">Time of birth</string>
    <string name="start_time_desc"><![CDATA[We are almost done!<br>name, please enter your time of birth.]]></string>
    <string name="start_time_skip">I DON\'T KNOW FOR SURE</string>
    <string name="start_place_title">Place of birth</string>
    <string name="start_place_desc"><![CDATA[Your place of birth will give a clearer image of how stars affect you.]]></string>
    <string name="start_place_hint">City, Country</string>
    <string name="settings_title">Settings</string>
    <string name="settings_notifications_title">Notifications</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_dark_theme_title">Night</string>
    <string name="settings_light_theme_title">Day</string>
    <string name="settings_personal_info_title">Personal info</string>
    <string name="settings_faq_title">FAQ</string>
    <string name="settings_privace_policy_title">Privacy Policy</string>
    <string name="settings_terms_conditions_title">Terms &amp; Conditions</string>
    <string name="settings_manage_sub_title">Manage Subscriptions</string>
    <string name="settings_version_title">Version</string>
    <string name="settings_write_us_title">Write to us</string>
    <string name="faq_title">FAQ</string>
    <string name="affirmations_title">Affirmations</string>
    <string name="forecasts_title">Forecasts</string>
    <string name="next_affirmation_text">The next affirmation will be tomorrow</string>
    <string name="next_forecast_text">Your individual weekly forecast</string>
    <string name="affirmation_share">Share</string>
    <string name="daily_transits_title">Planet transits</string>
    <string name="gates_title">Gates</string>
    <string name="channels_title">Channels</string>
    <string name="next_transit_text">The next transit will be tomorrow</string>
    <string name="design_title">Design</string>
    <string name="transit_title">Transit</string>
    <string name="personality_title">Personality</string>
    <string name="to_decryption_text">to decryption</string>
    <string name="about_title">About</string>
    <string name="centers_title">Centers</string>
    <string name="places_empty_text">No results</string>
    <string name="active_channels_title">Active Channels</string>
    <string name="active_channels_text">Channels are bridges that connect all the active centers within your design. Here you will find the descriptions of the most important aspects of your life.</string>
    <string name="active_gates_title">Active Gates</string>
    <string name="active_gates_text">The gates are a personal feature of your character, showing the potential that you can discover in yourself, making certain decisions every day.</string>
    <string name="active_centers_title">Defined Centers</string>
    <string name="active_centers_text">Defined centers perform the functions assigned to them. This is what is determined in you from the birth, this is consistent energy by which you are recognized. From here you are broadcasting your energy out into the world, influencing and inspiring others. It is what is fixed and reliable within you.</string>
    <string name="inactive_centers_title">Undefined Centers</string>
    <string name="inactive_centers_text">Undefined centers are open to influence from the outside, these are places where you are designed to be receptive from people and life. These are places of vulnerability and sensitivity where the world affects you.</string>
    <string name="to_bodygraph">to bodygraph</string>
    <string name="diagram_title">My charts</string>
    <string name="diagram_empty_text">In this section, you can add bodygraphs of other people (friends, acquaintances) and get to know them from a completely new side</string>
    <string name="partners_title">Partners</string>
    <string name="children_title">Children</string>
    <string name="compatibility_title">Relationship</string>
    <string name="name_title">Name</string>
    <string name="city_birth_title">City of birth</string>
    <string name="date_birth_title">Date of birth</string>
    <string name="time_birth_title">Time of birth</string>
    <string name="personal_info_title">Personal info</string>
    <string name="done_title">Done</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_title">Are you sure?</string>
    <string name="confirm_text">The introduction of new data will lead\nto the fact that your design will\nirreversibly change. Are you sure you\nwant to change the data?</string>
    <string name="type_title">Type</string>
    <string name="profile_title">Profile</string>
    <string name="authority_title">Authority</string>
    <string name="strategy_title">Strategy</string>
    <string name="injury_title">Genetic Trauma</string>
    <string name="nutrition_title">Nutrition</string>
    <string name="environment_title">Environment</string>
    <string name="start_bodygraph_ready_title">Bodygraph is ready!</string>
    <string name="start_bodygraph_creating_title">Creating bodygraph…</string>
    <string name="start_bodygraph_ready_text"><![CDATA[Start your experiment and improve the quality of your life!]]></string>
    <string-array name="push_titles">
        <item>Guide to discover your true Self 👤</item>
        <item>Your potential at the biochemistry level 🧬</item>
        <item>Your individual forecast is ready! 🔮</item>
        <item>Click here to read 🔍</item>
        <item>Free human design decoding ⚛️️</item>
    </string-array>
    <string-array name="push_descs">
        <item>3 Days Free Trial 🔥 Click here to try</item>
        <item>Try it right now for free 🔬</item>
        <item>Visit the App to learn more ☝🏽</item>
        <item>Your compatibility report awaits you 🔥</item>
        <item>Visit the App to read it ☝🏽</item>
    </string-array>
    <string name="compatibility_detail_title">Relationship</string>
    <string name="profiles_title">Profile</string>
    <string name="add_partner_rave_title"><![CDATA[Let’s calculate\nthe bodygraph!]]></string>
    <string name="add_child_rave_title"><![CDATA[Let’s calculate\nyour child’s\nbodygraph!]]></string>
    <string name="add_partner_rave_desc"><![CDATA[Enter your partner’s information and\nfind out everything about your\ncompatibility. You will understand where\nou coincide and where you are\ndissimilar.]]></string>
    <string name="add_child_rave_desc"><![CDATA[Enter the details of your child, this will\nallow you to choose the right approach in\nhis upbringing. The child’s bodygraph\ncannot be used as the main bodygraph.]]></string>
    <string name="add_partner_name_title"><![CDATA[What is your partner’s name?]]></string>
    <string name="add_child_name_title"><![CDATA[Name of your child]]></string>
    <string name="add_partner_name_desc"><![CDATA[Introduce your partner to us! ]]></string>
    <string name="add_child_name_desc"><![CDATA[Please enter the name of the child for\nwhom the bodygraph is calculated.]]></string>
    <string name="menu_first_title">Bodygraph</string>
    <string name="menu_second_title">Description</string>
    <string name="menu_third_title">Transits</string>
    <string name="menu_forth_title">Compatibility</string>
    <string name="menu_fifth_title">Insights</string>
</resources>